Fix z-index for sidebar images

--- a/src/style.css
+++ b/src/style.css
@@ -11,17 +11,20 @@
         0 -5px 0 0 black,
         0 5px 0 0 black;
 }
-
+*{
+    z-index: 3;
+}
 img {
     position: absolute;
     box-sizing: border-box;
     width: 300;
     height: auto;
     top: 8rem;
+    z-index: 2;
 }
 
 .img-left {
-    left: 0;
+    left: 2rem;
 }
 
 .img-right {
@@ -35,7 +38,8 @@ img {
     width: 100vw;
     height: 100vh;
     flex-direction: column;
-
+    background-color: #313552;
+    z-index: 1;
 }
 
 .header {
@@ -44,7 +48,7 @@ img {
     display: inherit;
     justify-content: center;
     width: 100%;
-    background-color: #313552;
+    
 }
 
 .header>p {
@@ -56,7 +60,6 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #313552;
     gap: 30px;
     padding: 1rem;
 }
@@ -67,9 +70,11 @@ img {
     font-size: 30px;
     text-align: center;
     color: #b8405e;
+    background-color: #313552;
     box-shadow: var(--pixel-border);
     /*Temporary border*/
     cursor: pointer;
+    z-index: 3;
 }
 
 .tabs>div:hover {
@@ -80,7 +85,6 @@ img {
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    background-color: #313552;
     flex-direction: column;
     height: 100%;
 }
@@ -93,6 +97,7 @@ img {
     margin: 2rem;
     padding: 1rem;
     background-color: #eee6ce;
+    z-index: 3;
 }
 
 .home-hours {
@@ -104,6 +109,7 @@ img {
     margin: 2rem;
     padding: 1rem;
     background-color: #eee6ce;
+    z-index: 3;
 }
 
 .home-location {
@@ -115,4 +121,5 @@ img {
     margin: 2rem;
     padding: 1rem;
     background-color: #eee6ce;
+    z-index: 3;
 }
